<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ma_bground">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/courier_prime"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        android:fontFamily="@font/courier_prime"
        android:text="@string/app_definition"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:letterSpacing="-0.10" />

    <TextView
        android:id="@+id/calc_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/calc_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/calc_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:textAlignment="center"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mix_button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"
        android:background="@drawable/circle_button"
        android:text="@string/btn_text_mix"
        android:textColor="@color/white"
        android:fontFamily="@font/courier_prime"
        android:textSize="64sp"
        />

</RelativeLayout>